Concurrent Collections, Completable Future e Parallel Streams